1. Fixed leaving component to open in a new tab and ignore pop-up issue on mobile; 2. Added NyTimes font on story-details <p>; 3. Setup image building scripts on package.json.

--- a/src/assets/styles/_story-details.css
+++ b/src/assets/styles/_story-details.css
@@ -6,6 +6,10 @@
   font-family: var(--storyFont);
 }
 
+.story-details p {
+  font-family: var(--storyFont);
+}
+
 .story-details-container {
   /* border: 2px solid blue; */
   padding-left: 18px;
